# Graduate_work

./: Creating_Gaps.sql  Creating_Norm.sql  Creating_Result.sql
Create_connect_filling_2db/: CMakeLists.txt
Create_connect_filling_2db/Split_into_2_databases/: Split_into_2_databases.py
Create_connect_filling_2db/src/: main.cpp
Create_connect_filling_2db/Уникальные_значения_столбцов/: Read_brands.py  Read_common_entities.py
Join_tables/: CMakeLists.txt
Join_tables/src/: main.cpp
Recovery_db/: CMakeLists.txt
Recovery_db/src/: main.cpp
